--- a/src/space/CMakeLists.txt
+++ b/src/space/CMakeLists.txt
@@ -1,2 +1,6 @@
-add_subdirectory(objects)
-add_subdirectory(rules)
+add_library(lib_space_s STATIC space.cpp)
+target_include_directories(lib_space_s PUBLIC 
+                                            ${CMAKE_CURRENT_SOURCE_DIR}/rules
+                                            ${CMAKE_CURRENT_SOURCE_DIR}/physical_object
+                                            ${CMAKE_CURRENT_SOURCE_DIR}/drawable_object
+                                            )
